Archive2/4b/a21999befa71fe/output
main.cpp: In function 'int main()':
main.cpp:6:17: error: switch quantity not an integer
     switch (word) {
                 ^
main.cpp:7:14: error: could not convert '"hello"' from 'const char [6]' to '<type error>'
         case "hello": std::cout << "hello";
              ^
