Archive2/4b/a21999befa71fe/main.cpp
#include <iostream>
 
int main()
{
    char word[] = "hello";
    switch (word) {
        case "hello": std::cout << "hello";
        default: std::cout << "default";
    }
 
    std::cout << '\n';
}